{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 162,
  "lineage": "052b13fc-e5e8-5d6f-4d27-765c6d22be03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yebbas-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f837acd9af5d0944",
            "arn": "arn:aws:ec2:us-east-1:606794105830:instance/i-0991b89ea6ea8d510",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0991b89ea6ea8d510",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063521a5ce2b191b4",
            "private_dns": "ip-10-0-1-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "public_dns": "ec2-18-234-142-17.compute-1.amazonaws.com",
            "public_ip": "18.234.142.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e8ad755e2187858",
                "volume_size": 45,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a30443c9637de6",
            "tags": {
              "Name": "yebbas server"
            },
            "tags_all": {
              "Name": "yebbas server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-079d801af3e4ad078"
            ]
          },
          "dependencies": [
            "aws_security_group.yebbas-sg",
            "aws_subnet.yebbas-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606794105830:internet-gateway/igw-0a4662c32828e668d",
            "id": "igw-0a4662c32828e668d",
            "owner_id": "606794105830",
            "tags": {
              "Name": "yebbas-igw"
            },
            "tags_all": {
              "Name": "yebbas-igw"
            },
            "vpc_id": "vpc-0e739263becc4ce4c"
          },
          "dependencies": [
            "aws_vpc.yebbas-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yebbas-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606794105830:route-table/rtb-07eb937622af82e45",
            "id": "rtb-07eb937622af82e45",
            "owner_id": "606794105830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4662c32828e668d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yebbas-rt"
            },
            "tags_all": {
              "Name": "yebbas-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e739263becc4ce4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_internet_gateway",
            "aws_vpc.yebbas-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0311cae50f00d4972",
            "route_table_id": "rtb-07eb937622af82e45",
            "subnet_id": "subnet-003a30443c9637de6"
          },
          "dependencies": [
            "aws_internet_gateway.aws_internet_gateway",
            "aws_route_table.yebbas-rt",
            "aws_subnet.yebbas-subnet",
            "aws_vpc.yebbas-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yebbas-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606794105830:security-group/sg-079d801af3e4ad078",
            "description": "Allow http and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079d801af3e4ad078",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "yebbas-sg",
            "name_prefix": "",
            "owner_id": "606794105830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yebbas-sg"
            },
            "tags_all": {
              "Name": "yebbas-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e739263becc4ce4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.yebbas-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "yebbas-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606794105830:subnet/subnet-003a30443c9637de6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a30443c9637de6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "606794105830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yebbas-subnet"
            },
            "tags_all": {
              "Name": "yebbas-subnet"
            },
            "vpc_id": "vpc-0e739263becc4ce4c"
          },
          "dependencies": [
            "aws_vpc.yebbas-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "yebbas-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606794105830:vpc/vpc-0e739263becc4ce4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f65cff316571359e",
            "default_route_table_id": "rtb-0e3234bc257c48606",
            "default_security_group_id": "sg-0f8dc31b14d18e609",
            "dhcp_options_id": "dopt-024826ee6b138ba01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e739263becc4ce4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3234bc257c48606",
            "owner_id": "606794105830",
            "tags": {
              "Name": "yebbas-vpc"
            },
            "tags_all": {
              "Name": "yebbas-vpc"
            }
          }
        }
      ]
    }
  ]
}